--- a/src/workforce-management/project.json
+++ b/src/workforce-management/project.json
@@ -25,7 +25,8 @@
     "Microsoft.EntityFrameworkCore.Design": {
       "version": "1.0.0-preview2-final",
       "type": "build"
-    }
+    },
+    "Microsoft.AspNetCore.Mvc.Core": "1.0.1"
   },
 
   "tools": {
