--- a/src/workforce-management/project.json
+++ b/src/workforce-management/project.json
@@ -26,7 +26,8 @@
       "version": "1.0.0-preview2-final",
       "type": "build"
     },
-    "Microsoft.AspNetCore.Mvc.Core": "1.0.1"
+    "Microsoft.AspNetCore.Mvc.Core": "1.0.1",
+    "jQuery.UI.Combined": "1.12.1"
   },
 
   "tools": {
