--- a/src/workforce-management/project.json
+++ b/src/workforce-management/project.json
@@ -16,6 +16,7 @@
     "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0",
     "Microsoft.Extensions.Configuration.Json": "1.0.0",
     "Microsoft.Extensions.Configuration.CommandLine": "1.0.0",
+    "Microsoft.Extensions.Caching.Memory": "1.0.0",
     "Microsoft.Extensions.Logging": "1.0.0",
     "Microsoft.Extensions.Logging.Console": "1.0.0",
     "Microsoft.Extensions.Logging.Debug": "1.0.0",
@@ -26,7 +27,9 @@
       "version": "1.0.0-preview2-final",
       "type": "build"
     },
-    "Microsoft.AspNetCore.Mvc.Core": "1.0.1"
+    "Microsoft.AspNetCore.Mvc.Core": "1.0.1",
+    "Microsoft.ApplicationInsights": "2.1.0",
+    "Microsoft.AspNetCore.Session": "1.0.0"
   },
 
   "tools": {
